--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -220,8 +220,14 @@
     "description": ""
   },
   "chatgpt_textarea_not_found_error": {
-    "message": "There is an error sending the prompt to ChatGPT, please retry. If the problem persists, please <a href=\"https://micz.it/thunderbird-addon-thunderai/status/\">check the service status</a>.",
-    "description": ""
+    "message": "There is an error sending the prompt to ChatGPT, please retry. If the problem persists, please <a href=\"$URL$\">check the service status</a>.",
+    "description": "",
+    "placeholders": {
+      "url": {
+        "content": "$1",
+        "example": "https://micz.it/thunderbird-addon-thunderai/status/"
+      }
+    }
   },
   "chatgpt_sendbutton_not_found_error": {
     "message": "Click the send button to submit the prompt.",
