--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -220,8 +220,14 @@
     "description": ""
   },
   "chatgpt_textarea_not_found_error": {
-    "message": "Il y a une erreur lors de l'envoi de la proposition à ChatGPT, veuillez réessayer. Si le problème persiste, veuillez <a href=\"https://micz.it/thunderbird-addon-thunderai/status/\">vérifier le statut du service</a>.",
-    "description": ""
+    "message": "Il y a une erreur lors de l'envoi de la proposition à ChatGPT, veuillez réessayer. Si le problème persiste, veuillez <a href=\"$URL$\">vérifier le statut du service</a>.",
+    "description": "",
+    "placeholders": {
+      "url": {
+        "content": "$1",
+        "example": "https://micz.it/thunderbird-addon-thunderai/status/"
+      }
+    }
   },
   "chatgpt_sendbutton_not_found_error": {
     "message": "Cliquez sur le bouton d'envoi pour soumettre la proposition.",
