--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -220,7 +220,7 @@
     "description": ""
   },
   "chatgpt_textarea_not_found_error": {
-    "message": "Es gibt einen Fehler beim Senden der Eingabeaufforderung an ChatGPT. Bitte versuchen Sie es erneut. Wenn das Problem weiterhin besteht, überprüfen Sie bitte den <a href=\"$URL$\">Dienststatus</a>.",
+    "message": "Es scheint, dass die ChatGPT-Seite zu lange zum Laden braucht. Wenn sie fertig geladen ist, klicken Sie auf den Button rechts. Wenn das Problem weiterhin besteht, überprüfen Sie bitte den <a href=\"$URL$\">Dienststatus</a>.",
     "description": "",
     "placeholders": {
       "url": {
@@ -228,6 +228,10 @@
         "example": "https://micz.it/thunderbird-addon-thunderai/status/"
       }
     }
+  },
+  "chatgpt_btn_retry": {
+    "message": "Wiederholen",
+    "description": ""
   },
   "chatgpt_sendbutton_not_found_error": {
     "message": "Klicken Sie auf die Schaltfläche „Senden“, um die Eingabeaufforderung zu übermitteln.",
