--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -220,7 +220,7 @@
     "description": ""
   },
   "chatgpt_textarea_not_found_error": {
-    "message": "C'è stato un errore nell'invio del prompt a ChatGPT, per favore riprova. Se il problema persiste, per favore <a href=\"$URL$\">controlla lo stato del servizio</a>.",
+    "message": "Sembra che la pagina di ChatGPT impieghi troppo tempo a caricarsi. Se finisce di caricarsi, clicca sul pulsante a destra. Se il problema persiste, per favore <a href=\"$URL$\">controlla lo stato del servizio</a>.",
     "description": "",
     "placeholders": {
       "url": {
@@ -228,6 +228,10 @@
         "example": "https://micz.it/thunderbird-addon-thunderai/status/"
       }
     }
+  },
+  "chatgpt_btn_retry": {
+    "message": "Riprova",
+    "description": ""
   },
   "chatgpt_sendbutton_not_found_error": {
     "message": "Premi il pulsante per inviare il prompt a ChatGPT.",
