--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -451,7 +451,7 @@
     "message": "API Ollama (LLM Locale)",
     "description": ""
   },
-  "prefs_Ollama_Host": {
+  "prefs_API_Host": {
     "message": "Indirizzo dell'host",
     "description": ""
   },
@@ -499,7 +499,7 @@
     "message": "In attesa della risposta del server",
     "description": ""
   },
-  "prefs_Ollama_Host_Info": {
+  "prefs_API_Host_Info": {
     "message": "Qualcosa come",
     "description": ""
   }
