information added to the option page for the OpenAI Comp integration. see #126

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -331,6 +331,10 @@
     "message": "To use the integration with Ollama, you need to set up a local Ollama server. Once the server is running, enter its address in the designated field within the application. To ensure proper communication between the app and the Ollama server remember to set OLLAMA_ORIGINS=moz-extension://*.",
     "description": ""
   },
+  "prefsInfoDesc_4": {
+    "message": "To use this integration, you need to set up a local server compatible with the OpenAI API, like LM Studio. Once the server is running, enter its address in the designated field within the application. To ensure proper communication between the app and the local server remember to correctly set the CORS settings.",
+    "description": ""
+  },
   "prefsDonation_1": {
     "message": "Do you like this addon?",
     "description": ""
