the element to show and search for a prompt is correctly showed and hidden. see #130

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -542,5 +542,9 @@
   "StorageSpace": {
     "message": "Total storage space occupied",
     "description": ""
+  },
+  "SearchPrompt": {
+    "message": "Search a prompt",
+    "description": ""
   }
 }
