--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -327,6 +327,14 @@
     "message": "To use this integration, you need to set up a local server compatible with the OpenAI API, like LM Studio. Once the server is running, enter its address in the designated field within the application. To ensure proper communication between ThunderAI and the local server remember to set the CORS settings correctly.",
     "description": ""
   },
+  "prefsInfoDesc_5": {
+    "message": "Remember that you can open the ThunderAI menu using the keyboard shortcut CTRL+ALT+A.",
+    "description": ""
+  },
+  "prefsInfoDesc_6": {
+    "message": "You can change the shortcut clicking on the cogwheel icon at the top right of this page and choosing \"Manage Extension Shortcut\".",
+    "description": ""
+  },
   "prefsDonation_1": {
     "message": "Do you like this addon?",
     "description": ""
