dynamic_menu_force_enter option added. see #130

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -554,5 +554,13 @@
   "SearchPrompt": {
     "message": "Search a prompt",
     "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_force_enter": {
+    "message": "Menu: immediate prompt send",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_force_enter_info": {
+    "message": "If checked, using the keyboard shortcut CTRL+ALT+A will automatically send the hightlighted prompt from the menu. Otherwise, the prompt name will be displayed to the user, requiring another press of the Enter key to send it.",
+    "description": ""
   }
 }
