--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
     "message": "Verwende ChatGPT oder Ollama, um deine E-Mails zu verbessern!",
-    "description": "Beschreibung der Erweiterung."
+    "description": "Description of the extension."
   },
   "menu_title": {
     "message": "KI",
@@ -323,6 +323,18 @@
     "message": "Um die Integration mit Ollama zu nutzen, müssen Sie einen lokalen Ollama-Server einrichten. Sobald der Server läuft, geben Sie dessen Adresse in das dafür vorgesehene Feld in der Anwendung ein. Um eine ordnungsgemäße Kommunikation zwischen der ThunderAI und dem Ollama-Server sicherzustellen, denken Sie daran, OLLAMA_ORIGINS=moz-extension://* festzulegen.",
     "description": ""
   },
+  "prefsInfoDesc_4": {
+    "message": "Um diese Integration zu nutzen, müssen Sie einen lokalen Server einrichten, der mit der OpenAI-API kompatibel ist, wie z.B. LM Studio. Sobald der Server läuft, geben Sie dessen Adresse in das dafür vorgesehene Feld innerhalb der Anwendung ein. Um eine ordnungsgemäße Kommunikation zwischen ThunderAI und dem lokalen Server sicherzustellen, denken Sie daran, die CORS-Einstellungen korrekt zu konfigurieren.",
+    "description": ""
+  },
+  "prefsInfoDesc_5": {
+    "message": "Denken Sie daran, dass Sie das ThunderAI-Menü mit der Tastenkombination STRG+ALT+A öffnen können.",
+    "description": ""
+  },
+  "prefsInfoDesc_6": {
+    "message": "Sie können die Tastenkombination ändern, indem Sie auf das Zahnradsymbol oben rechts auf dieser Seite klicken und \"Erweiterungskürzel verwalten\" auswählen.",
+    "description": ""
+  },
   "prefsDonation_1": {
     "message": "Gefällt Ihnen dieses Addon?",
     "description": ""
@@ -443,6 +455,10 @@
     "message": "Ollama API (Lokales LLM)",
     "description": ""
   },
+  "prefs_Connection_type_OpenAI_Comp_API": {
+    "message": "OpenAI-kompatible API",
+    "description": ""
+  },
   "prefs_API_Host": {
     "message": "Host-Adresse",
     "description": ""
@@ -493,6 +509,70 @@
   },
   "prefs_API_Host_Info": {
     "message": "Etwas wie",
+    "description": ""
+  },
+  "OpenAIComp_Models": {
+    "message": "OpenAI-kompatible API-Modelle",
+    "description": ""
+  },
+  "OpenAIComp_Models_Fetch": {
+    "message": "Aktualisiere die Liste der OpenAI-kompatiblen API-Modelle.",
+    "description": ""
+  },
+  "OpenAIComp_Models_Error_fetching": {
+    "message": "Fehler beim Abrufen der OpenAI-kompatiblen API-Modelle.",
+    "description": ""
+  },
+  "OpenAIComp_empty_host": {
+    "message": "Sie haben keine Host-Adresse für die OpenAI-kompatible API hinzugefügt. Bitte fügen Sie eine auf der Optionsseite ein.",
+    "description": ""
+  },
+  "OpenAIComp_empty_model": {
+    "message": "Sie haben kein Modell für die OpenAI-kompatible API ausgewählt. Bitte wählen Sie eines auf der Optionsseite aus.",
+    "description": ""
+  },
+  "OpenAIComp_api_connecting": {
+    "message": "Versuche, eine Verbindung zum OpenAI-kompatiblen lokalen API-Server über den Host herzustellen.",
+    "description": ""
+  },
+  "OpenAIComp_api_request_failed": {
+    "message": "OpenAI-kompatible API-Anfrage fehlgeschlagen",
+    "description": ""
+  },
+  "prefs_OpenAIComp_ChatName": {
+    "message": "Chat-Name",
+    "description": ""
+  },
+  "prefs_OpenAIComp_ChatName_Info": {
+    "message": "Dies ist der Name, der im AI-Chat verwendet wird.",
+    "description": ""
+  },
+  "StorageSpace": {
+    "message": "Gesamtspeicherplatz belegt",
+    "description": ""
+  },
+  "SearchPrompt": {
+    "message": "Suchanfragen",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_force_enter": {
+    "message": "Menü: Sofortige Aufforderung senden",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_force_enter_info": {
+    "message": "Wenn diese Option aktiviert ist, wird die Tastenkombination STRG+ALT+A den hervorgehobenen Prompt aus dem Menü automatisch senden. Andernfalls wird der Prompt-Name dem Benutzer angezeigt, und es ist ein weiterer Druck auf die Eingabetaste erforderlich, um ihn zu senden.",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_order_alphabet": {
+    "message": "Menü: Alphabetisch sortieren",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_order_alphabet_info": {
+    "message": "Wenn diese Option aktiviert ist, werden die Prompts im Menü alphabetisch sortiert.",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_win_dims_info": {
+    "message": "Auf 0 setzen, wenn Sie die Fenstergröße nicht angeben möchten.",
     "description": ""
   }
 }
