--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
     "message": "Utilise ChatGPT ou Ollama pour améliorer tes e-mails !",
-    "description":  "Description de l'extension."
+    "description": "Description of the extension."
   },
   "menu_title": {
     "message": "IA",
@@ -323,6 +323,18 @@
     "message": "Pour utiliser l'intégration avec Ollama, vous devez configurer un serveur Ollama local. Une fois que le serveur est en marche, entrez son adresse dans le champ prévu à cet effet dans l'application. Pour garantir une communication adéquate entre ThunderAI et le serveur Ollama, n'oubliez pas de définir OLLAMA_ORIGINS=moz-extension://*.",
     "description": ""
   },
+  "prefsInfoDesc_4": {
+    "message": "Pour utiliser cette intégration, vous devez configurer un serveur local compatible avec l'API OpenAI, tel que LM Studio. Une fois le serveur lancé, entrez son adresse dans le champ prévu à cet effet dans l'application. Pour assurer une communication correcte entre ThunderAI et le serveur local, n'oubliez pas de configurer correctement les paramètres CORS.",
+    "description": ""
+  },
+  "prefsInfoDesc_5": {
+    "message": "N'oubliez pas que vous pouvez ouvrir le menu ThunderAI en utilisant le raccourci clavier CTRL+ALT+A.",
+    "description": ""
+  },
+  "prefsInfoDesc_6": {
+    "message": "Vous pouvez changer le raccourci en cliquant sur l'icône de l'engrenage en haut à droite de cette page et en choisissant \"Gérer le raccourci de l'extension\".",
+    "description": ""
+  },
   "prefsDonation_1": {
     "message": "Aimez-vous cet addon ?",
     "description": ""
@@ -443,6 +455,10 @@
     "message": "API Ollama (LLM local)",
     "description": ""
   },
+  "prefs_Connection_type_OpenAI_Comp_API": {
+    "message": "API compatible OpenAI",
+    "description": ""
+  },
   "prefs_API_Host": {
     "message": "Adresse de l'hôte",
     "description": ""
@@ -493,6 +509,70 @@
   },
   "prefs_API_Host_Info": {
     "message": "Quelque chose comme",
+    "description": ""
+  },
+  "OpenAIComp_Models": {
+    "message": "Modèles d'API compatibles OpenAI",
+    "description": ""
+  },
+  "OpenAIComp_Models_Fetch": {
+    "message": "Mettre à jour la liste des modèles d'API compatibles OpenAI",
+    "description": ""
+  },
+  "OpenAIComp_Models_Error_fetching": {
+    "message": "Erreur lors de la tentative de récupération des modèles d'API compatibles OpenAI",
+    "description": ""
+  },
+  "OpenAIComp_empty_host": {
+    "message": "Vous n'avez pas ajouté d'adresse hôte pour l'API compatible OpenAI. Veuillez en insérer une dans la page des options.",
+    "description": ""
+  },
+  "OpenAIComp_empty_model": {
+    "message": "Vous n'avez pas choisi de modèle pour l'API compatible OpenAI. Veuillez en choisir un dans la page des options.",
+    "description": ""
+  },
+  "OpenAIComp_api_connecting": {
+    "message": "Tentative de connexion au serveur local de l'API compatible OpenAI en utilisant l'hôte",
+    "description": ""
+  },
+  "OpenAIComp_api_request_failed": {
+    "message": "La requête de l'API compatible OpenAI a échoué",
+    "description": ""
+  },
+  "prefs_OpenAIComp_ChatName": {
+    "message": "Nom du chat",
+    "description": ""
+  },
+  "prefs_OpenAIComp_ChatName_Info": {
+    "message": "C'est le nom qui sera utilisé dans le chat de l'IA.",
+    "description": ""
+  },
+  "StorageSpace": {
+    "message": "Espace de stockage total occupé",
+    "description": ""
+  },
+  "SearchPrompt": {
+    "message": "Rechercher des invites",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_force_enter": {
+    "message": "Menu : Envoi immédiat de l'invite",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_force_enter_info": {
+    "message": "Si cette option est cochée, le raccourci clavier CTRL+ALT+A enverra automatiquement l'invite sélectionnée dans le menu. Sinon, le nom de l'invite sera affiché à l'utilisateur, nécessitant une nouvelle pression sur la touche Entrée pour l'envoyer.",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_order_alphabet": {
+    "message": "Menu : Trier par ordre alphabétique",
+    "description": ""
+  },
+  "prefs_OptionText_dynamic_menu_order_alphabet_info": {
+    "message": "Si cette option est cochée, les invites dans le menu seront triées par ordre alphabétique.",
+    "description": ""
+  },
+  "prefs_OptionText_chatgpt_win_dims_info": {
+    "message": "Réglez sur 0 si vous ne souhaitez pas spécifier la taille de la fenêtre.",
     "description": ""
   }
 }
