--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -572,7 +572,7 @@
     "description": ""
   },
   "prefs_OptionText_chatgpt_win_dims_info": {
-    "message": "Imposta su 0 se non desideri specificare la dimensione della finestra.",
+    "message": "Imposta a 0 se non desideri specificare la dimensione della finestra.",
     "description": ""
   }
 }
