--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -388,7 +388,7 @@
     "description": ""
   },
   "customprompts_form_label_define_response_lang": {
-    "message": "Define the reponse languange in the prompt",
+    "message": "Define the reponse language in the prompt",
     "description": ""
   },
   "prefs_Connection_type": {
