--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -503,6 +503,10 @@
     "message": "La demande d'API Ollama a échoué",
     "description": ""
   },
+  "chatgpt_api_request_failed": {
+    "message": "La demande d'API OpenAI ChatGPT a échoué",
+    "description": ""
+  },
   "WaitingServerReponse": {
     "message": "En attente de la réponse du serveur",
     "description": ""
@@ -586,5 +590,13 @@
   "OpenChatGPTTab_Info": {
     "message": "En cas de problèmes de connexion dans la fenêtre ThunderAI, ouvrez ChatGPT dans un nouvel onglet à l'aide du bouton à droite, connectez-vous, puis fermez l'onglet et continuez à utiliser ThunderAI.",
     "description": ""
+  },
+  "prefs_OptionText_openai_comp_use_v1": {
+    "message": "Conserver la compatibilité \"v1\"",
+    "description": ""
+  },
+  "prefs_OptionText_openai_comp_use_v1_info": {
+      "message": "Si coché, le segment \"v1\" dans le chemin des appels API sera conservé, comme \"http://localhost:1234/v1/chat/completions\".",
+      "description": ""
   }
 }
